--- a/Dataverse.Monitoring.Sdk/Dataverse.Monitoring.Sdk.csproj
+++ b/Dataverse.Monitoring.Sdk/Dataverse.Monitoring.Sdk.csproj
@@ -13,6 +13,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.Web" Version="2.21.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.ApplicationInsights" Version="2.21.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
