--- a/Dataverse.Monitoring.Sdk/appsettings.json
+++ b/Dataverse.Monitoring.Sdk/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "default": "AuthType=OAuth;Url=https://org.crm.dynamics.com;Username=someone@myorg.onmicrosoft.com;RedirectUri=http://localhost;AppId=51f81489-12ee-4a9e-aaae-a2591f45987d;LoginPrompt=Auto",
-    "APPLICATIONINSIGHTS_CONNECTION_STRING": "InstrumentationKey=<yourKey>;IngestionEndpoint=https://westus2-1.in.applicationinsights.azure.com/;LiveEndpoint=https://westus2.livediagnostics.monitor.azure.com/"
+    "default": "AuthType=OAuth;Url=https://alyousse.crm.dynamics.com;Username=someone@myorg.onmicrosoft.com;RedirectUri=http://localhost;AppId=51f81489-12ee-4a9e-aaae-a2591f45987d;LoginPrompt=Auto",
+    "APPLICATIONINSIGHTS_CONNECTION_STRING": "InstrumentationKey=2002f686-da1b-4894-974c-056bf5bb9b34;IngestionEndpoint=https://westus2-1.in.applicationinsights.azure.com/;LiveEndpoint=https://westus2.livediagnostics.monitor.azure.com/"
   },
   "Logging": {
     "LogLevel": {
