--- a/Dynamics365.Monitoring.Plugins/packages.config
+++ b/Dynamics365.Monitoring.Plugins/packages.config
@@ -1,5 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.32" targetFramework="net471" />
-  <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net452" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.50" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.34" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.50" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="7.0.4" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Http" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options" version="7.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Identity.Client" version="4.56.0" targetFramework="net462" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.56.0" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.22.0" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.3.0" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Targets" version="1.1.3" targetFramework="net462" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.24" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="7.0.0" targetFramework="net462" />
+  <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
+  <package id="System.Private.Uri" version="4.3.2" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net462" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.ProtectedData" version="4.5.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net462" />
+  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net462" />
+  <package id="System.Text.Json" version="7.0.3" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
